<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/gridLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="2"
    android:labelFor="@+id/amountEditText"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:rowCount="36"
    android:useDefaultMargins="true"
    tools:context="com.example.tipcalculator.MainActivity" >

    <TextView
        android:id="@+id/amountTextView"
        android:layout_gravity="left|right"
        android:labelFor="@+id/amountEditText"
        android:text="@string/amount"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/amountEditText"
        android:layout_width="221dp"
        android:layout_height="wrap_content"
        android:digits="0123456789"
        android:inputType="number"
        android:maxLength="6" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/amountDisplayTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal|left"
        android:layout_row="0"
        android:background="@android:color/holo_blue_bright"
        android:padding="@dimen/textview_padding"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/customPercentTextView"
        android:layout_column="0"
        android:layout_gravity="left|right"
        android:layout_row="7"
        android:text="@string/custom_tip_percentage"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <LinearLayout
        android:id="@+id/percentLinearLayout"
        android:layout_width="wrap_content"
        android:layout_gravity="left"
        android:layout_row="8" >

        <TextView
            android:id="@+id/percent15TextView"
            android:layout_width="107dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/fifteen_percent"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/percentCustomTextView"
            android:layout_width="113dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/eighteen_percent"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <TextView
        android:id="@+id/tipTextView"
        android:layout_gravity="center_vertical|left|right"
        android:text="@string/tip"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <LinearLayout
        android:id="@+id/tipLinearLayout"
        android:layout_gravity="fill_horizontal"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tip15TextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="8dp"
            android:layout_weight="0.87"
            android:background="@android:color/holo_orange_light"
            android:gravity="center"
            android:padding="@dimen/textview_padding"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/tipCustomTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@android:color/holo_orange_light"
            android:gravity="center"
            android:padding="@dimen/textview_padding"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <TextView
        android:id="@+id/totalTextView"
        android:layout_gravity="center_vertical|left|right"
        android:text="@string/total"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <LinearLayout
        android:id="@+id/totalLinearLayout"
        android:layout_gravity="fill_horizontal" >

        <TextView
            android:id="@+id/total15TextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="8dp"
            android:layout_weight="0.83"
            android:background="@android:color/holo_orange_light"
            android:gravity="center"
            android:padding="@dimen/textview_padding"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/totalCustomTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@android:color/holo_orange_light"
            android:gravity="center"
            android:padding="@dimen/textview_padding"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <SeekBar
        android:id="@+id/customTipSeekBar"
        android:layout_width="208dp"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_gravity="center_horizontal|top"
        android:layout_row="7"
        android:max="30"
        android:progress="18" />

    <EditText
        android:id="@+id/numPeopleEditText"
        android:layout_width="221dp"
        android:layout_height="wrap_content"
        android:digits="0123456789"
        android:layout_gravity="fill_horizontal|left"
        android:layout_column="1"
        android:layout_row="28"
        android:background="@android:color/holo_blue_light"
        android:ems="10"
        android:inputType="number" />

    <TextView
        android:id="@+id/numPeople"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_gravity="left|top"
        android:layout_row="28"
        android:text="@string/numPeople"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/amountPersonText"
        android:layout_width="wrap_content"
        android:layout_column="0"
        android:layout_gravity="left|center_vertical"
        android:layout_row="29"
        android:text="@string/amountPerPerson"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <LinearLayout android:layout_gravity="fill_horizontal" >

        <TextView
            android:id="@+id/person15TextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="8dp"
            android:layout_weight="0.91"
            android:background="@android:color/holo_orange_light"
            android:gravity="center"
            android:padding="@dimen/textview_padding"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:visibility="visible" />

        <TextView
            android:id="@+id/personCustomTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@android:color/holo_orange_light"
            android:gravity="center"
            android:padding="@dimen/textview_padding"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>

    <CheckBox
        android:id="@+id/includeTaxCheckBox"
        android:layout_width="179dp"
        android:layout_column="1"
        android:layout_gravity="center_horizontal|top"
        android:layout_row="35"
        android:text="@string/includeTaxCheckBox" />

</GridLayout>